# Nuclex.Support.Native

./: .gitignore  CMakeLists.txt  Dependencies.md  License.md  Notice.md  Nuclex.Support.Native (msvc-11.0).vcxproj  Nuclex.Support.Native (msvc-11.0).vcxproj.filters  Nuclex.Support.Native (msvc-11.0-winrt).vcxproj  Nuclex.Support.Native (msvc-11.0-winrt).vcxproj.filters  Nuclex.Support.Native (msvc-12.0).vcxproj  Nuclex.Support.Native (msvc-12.0).vcxproj.filters  Nuclex.Support.Native (msvc-14.1).vcxproj  Nuclex.Support.Native (msvc-14.1).vcxproj.filters  Nuclex.Support.Native (msvc-14.2).vcxproj  Nuclex.Support.Native (msvc-14.2).vcxproj.filters  Nuclex.Support.Native (msvc-14.3).vcxproj  Nuclex.Support.Native (msvc-14.3).vcxproj.filters  Nuclex.Support.Native.Benchmark (msvc-14.1).vcxproj  Nuclex.Support.Native.Benchmark (msvc-14.1).vcxproj.filters  Nuclex.Support.Native.Benchmark (msvc-14.2).vcxproj  Nuclex.Support.Native.Benchmark (msvc-14.2).vcxproj.filters  Nuclex.Support.Native.Benchmark (msvc-14.3).vcxproj  Nuclex.Support.Native.Benchmark (msvc-14.3).vcxproj.filters  Nuclex.Support.Native.Tests (msvc-14.1).vcxproj  Nuclex.Support.Native.Tests (msvc-14.1).vcxproj.filters  Nuclex.Support.Native.Tests (msvc-14.2).vcxproj  Nuclex.Support.Native.Tests (msvc-14.2).vcxproj.filters  Nuclex.Support.Native.Tests (msvc-14.3).vcxproj  Nuclex.Support.Native.Tests (msvc-14.3).vcxproj.filters  Nuclex.Support.Native.cfg  Nuclex.Support.Native.doxygen.cfg  ReadMe.md  SConstruct  build-clang15.sh  build.cmd  build.sh
Attic/Collections/: ConcurrentQueue.cpp  ConcurrentQueue.h  ConcurrentQueueTest.cpp  ConcurrentRingBuffer.MPMC.inl  ConcurrentRingBuffer.MPSC.inl  ConcurrentRingBuffer.SPSC.inl  ConcurrentRingBuffer.cpp  ConcurrentRingBuffer.h  ConcurrentRingBufferTest_MPMC.cpp  ConcurrentRingBufferTest_MPSC.cpp  ConcurrentRingBufferTest_Mutex.cpp  ConcurrentRingBufferTest_SPSC.cpp  ConcurrentSet.h
Benchmarks/: BenchmarkMain.cpp
Benchmarks/Events/: BoostSignalsBenchmark.cpp  EventBenchmark.cpp  LSignalBenchmark.cpp  NanoSignalSlotBenchmark.cpp
Benchmarks/Text/: AmdnItoaBenchmark.cpp  IntegerToStringBenchmark.cpp  JeaiiiItoaBenchmark.cpp  JeaiiiLutItoaBenchmark.cpp  NumberFormatterBenchmark.cpp  StringHelperBenchmark.cpp
Documents/: Copyright.md  Documentation-ConcurrentJob.md  Documentation-DependencyInjection.md  Documentation-IniFiles.md  Documentation-LexicalCasts.md  Documentation-UnicodeHelper.md  Hazard Pointers.md  Signal-Slot-Benchmark.gnumeric  Todo.md
Source/: Any.cpp  BitTricks.cpp  Config.cpp  Endian.cpp  Lexical.cpp  Optional.cpp  ScopeGuard.cpp  TemporaryDirectoryScope.cpp  TemporaryFileScope.cpp  Variant.cpp  VariantType.cpp
Source/Collections/: Cache.cpp  Collection.cpp  ConcurrentCollection.cpp  ConcurrentMap.cpp  ConcurrentQueue.cpp  ConcurrentRingBuffer.cpp  ConcurrentSet.cpp  DynamicArray.cpp  IndexedCollection.cpp  KeyedArrayCache.cpp  Map.cpp  MultiCache.cpp  MultiMap.cpp  ObservableCollection.cpp  ObservableDynamicArray.cpp  ObservableIndexedCollection.cpp  RingQueue.cpp  SequentialSlotCache.cpp  ShiftQueue.cpp  StackArray.cpp  Variegator.cpp
Source/Errors/: CanceledError.cpp  CorruptStringError.cpp  CyclicDependencyError.cpp  EmptyDelegateCallError.cpp  FileAccessError.cpp  KeyNotFoundError.cpp  TimeoutError.cpp  UnresolvedDependencyError.cpp
Source/Events/: ConcurrentEvent.cpp  Delegate.cpp  Event.cpp  EventSubscriber.cpp
Source/Helpers/: LinuxFileAccessApi.cpp  LinuxFileAccessApi.h  LinuxFileApi.cpp  LinuxFileApi.h  PosixApi.cpp  PosixApi.h  PosixFileAccessApi.cpp  PosixFileAccessApi.h  PosixFileApi.cpp  PosixFileApi.h  PosixPathApi.cpp  PosixPathApi.h  PosixProcessApi.cpp  PosixProcessApi.h  PosixTimeApi.cpp  PosixTimeApi.h  WindowsApi.cpp  WindowsApi.h  WindowsFileAccessApi.cpp  WindowsFileAccessApi.h  WindowsFileApi.cpp  WindowsFileApi.h  WindowsPathApi.cpp  WindowsPathApi.h  WindowsProcessApi.cpp  WindowsProcessApi.h  WindowsRegistryApi.cpp  WindowsRegistryApi.h
Source/Interop/: ErrorPolicy.cpp  ErrorPolicy.h  LinuxFileApi.cpp  LinuxFileApi.h  LinuxFutexApi.cpp  LinuxFutexApi.h  PosixApi.cpp  PosixApi.h  PosixFileApi.cpp  PosixFileApi.h  PosixPathApi.cpp  PosixPathApi.h  PosixProcessApi.cpp  PosixProcessApi.h  PosixTimeApi.cpp  PosixTimeApi.h  WindowsApi.cpp  WindowsApi.h  WindowsFileApi.cpp  WindowsFileApi.h  WindowsPathApi.cpp  WindowsPathApi.h  WindowsProcessApi.cpp  WindowsProcessApi.h  WindowsRegistryApi.cpp  WindowsRegistryApi.h  WindowsSyncApi.cpp  WindowsSyncApi.h
Source/Platform/: LinuxFileApi.cpp  LinuxFileApi.h  LinuxFutexApi.cpp  LinuxFutexApi.h  PosixApi.cpp  PosixApi.h  PosixFileApi.cpp  PosixFileApi.h  PosixPathApi.cpp  PosixPathApi.h  PosixProcessApi.cpp  PosixProcessApi.h  PosixTimeApi.cpp  PosixTimeApi.h  WindowsApi.cpp  WindowsApi.h  WindowsFileApi.cpp  WindowsFileApi.h  WindowsPathApi.cpp  WindowsPathApi.h  WindowsProcessApi.cpp  WindowsProcessApi.h  WindowsRegistryApi.cpp  WindowsRegistryApi.h  WindowsSyncApi.cpp  WindowsSyncApi.h
Source/Services/: CyclicDependencyError.cpp  LazyServiceInjector.cpp  ServiceCollection.cpp  ServiceContainer.cpp  ServiceLifetime.cpp  ServiceProvider.cpp  ServiceScope.cpp  ServiceScopeFactory.cpp  StandardBindingSet.cpp  StandardBindingSet.h  StandardInstanceSet.cpp  StandardInstanceSet.h  StandardServiceCollection.PrivateImplementation.cpp  StandardServiceCollection.PrivateImplementation.h  StandardServiceCollection.cpp  StandardServiceProvider.cpp  StandardServiceProvider.h  StandardServiceScope.cpp  StandardServiceScope.h
Source/Services2/: ServiceCollection.cpp  ServiceLifetime.cpp  ServiceProvider.cpp  ServiceScope.cpp  ServiceScopeFactory.cpp  StandardBindingSet.cpp  StandardBindingSet.h  StandardInstanceSet.cpp  StandardInstanceSet.h  StandardServiceCollection.PrivateImplementation.cpp  StandardServiceCollection.PrivateImplementation.h  StandardServiceCollection.cpp  StandardServiceProvider.cpp  (+7 more)
Tests/: AnyTests.cpp  BitTricksTest.cpp  EndianTest.cpp  EndianTests.cpp  OptionalTests.cpp  ScopeGuardTest.cpp  TemporaryDirectoryScopeTest.cpp  TemporaryFileScopeTest.cpp  VariantTests.cpp
(+301 files in other folders)
